# casein

./: CASView.h  CASView.mm  CMakeLists.txt  README.md  android.cpp  apple.cpp  build.cpp  build.hpp  casein-call.cppm  casein-config.cmake  casein-events.cppm  casein-handler.cppm  casein-internal.cppm  casein.cppm  casein.hpp  casein.js  casein.sdl.hpp  casein.windows.hpp  common.hpp  externc.cpp  externc.h  externc.hpp  handler.cpp  ios.mm  keys.hpp  linux.cpp  oldevents.hpp  osx.mm  poc.cpp  poc.rc  poc.sdl.cpp  poc.wasm.html  sdl.cpp  wasm.cpp  windows.cpp
.github/workflows/: build.yaml
inc/: casein.hpp
poc/: main.cpp
src/: android.cpp  ios.mm  osx.m  osx.mm  windows.cpp
